bk_ida/gobmkida/g0/ascii_showboard
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/ascii_showboard/src/interface/play_ascii.c:687:7: error: use of undeclared identifier 'byte_4E235E'
v0 = &byte_4E235E; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/ascii_showboard/src/obj/2/play_ascii.o] Error 1
